# Synera_NJU

./: .gitignore  CMakeLists.txt  CODE_FAMILIARIZATION_GUIDE.md  README.md
src/: main.cpp
src/core/: Bench.cpp  Bench.h  Board.cpp  Board.h  Catalog.cpp  Catalog.h  EncounterGenerator.cpp  EncounterGenerator.h  GameState.cpp  GameState.h  Player.cpp  Player.h  SkillContext.cpp  SkillContext.h  Types.cpp  Types.h  Unit.cpp  Unit.h  UnitManager.cpp  UnitManager.h
src/gui/: AssetManager.cpp  AssetManager.h  BenchWidget.cpp  BenchWidget.h  BoardWidget.cpp  BoardWidget.h  DragData.cpp  DragData.h  EquipmentPanel.cpp  EquipmentPanel.h  InspectorPanel.cpp  InspectorPanel.h  MainWindow.cpp  MainWindow.h  PaintUtils.cpp  PaintUtils.h  PlacementController.cpp  PlacementController.h  ShopPanel.cpp  ShopPanel.h  SynergyPanel.cpp  SynergyPanel.h  main_gui.cpp
tests/: test_gui_layout.cpp  test_stage1.cpp  test_stage2.cpp  test_stage3.cpp
tools/: build_assets.py
